# Vero

./: .gitignore  Cargo.toml  README.md  vero_arxiv_paper.tex
crates/vero_cli/: Cargo.toml
crates/vero_cli/src/: main.rs  vero_lite.rs
crates/vero_ir/: Cargo.toml
crates/vero_ir/src/: coherence.rs  lib.rs
docs/: VERO_LITE_SPEC.md
docs/source/: SovreignDirectives.md  UniversalLaws.md  Vero_Philosophy.md
examples/: char_mvp.vero  char_nodes_edges.vero  genome_rule_example.vero  weight_example.vero
